<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/ten_dp"
    android:id="@+id/main_layout"
    android:background="@drawable/texture2"

    >

    <!--Through XML you can set the background-->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_height"
        android:padding="@dimen/ten_dp"
        android:src="@drawable/holy_quran_cover" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/textColorWhile"

                   />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/the_holy_quran"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/textColorWhile"
                   />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/textColorWhile"
                   />

                <TextView
                    android:id="@+id/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year1998"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/textColorWhile"
                   />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chapters"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/textColorWhile"

                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/five_dp"
                    android:background="@color/colorPrimary" />


                <TextView
                    android:id="@+id/chapters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/ten_dp"
                    android:paddingRight="@dimen/ten_dp"
                    android:text="@string/chapters_value_chapters_value"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/textColorWhile"
                   />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/five_dp"
                    android:background="@color/colorPrimary" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/five_dp"
        android:background="@color/colorPrimary"
        android:id="@+id/view" />


</LinearLayout>